--- a/CSV_Manipulation.ipynb
+++ b/CSV_Manipulation.ipynb
@@ -35,6 +35,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "inner-liquid",
+   "metadata": {},
+   "source": [
+    "### Algorithm\n",
+    "\n",
+    "1. check_user(username, email, password) : To validate detatils. Returns True if all details match else False\n",
+    "\n",
+    "2. \n",
+    "\n",
+    "3. signup() : accepts detatils from the user and checks if the username is already there in the \n",
+    "\n",
+    "header = []"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "incorrect-seeking",
@@ -46,13 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "prepared-lease",
    "metadata": {},
    "outputs": [],
    "source": [
     "user_csv = \"User_DB\"\n",
-    "user_header = ['User_id', 'Username', 'Email', 'Phone', 'Contact', 'Role']"
+    "user_header = ['User_id', 'Username', 'Email', 'Phone', 'Password', 'Role']\n",
+    "\n"
    ]
   },
   {
@@ -65,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "stock-bennett",
    "metadata": {},
    "outputs": [],
@@ -78,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "useful-moment",
    "metadata": {},
    "outputs": [],
@@ -93,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "split-transaction",
    "metadata": {},
    "outputs": [
@@ -101,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['User_id', 'Username', 'Email', 'Phone', 'Contact', 'Role']\n"
+      "['User_id', 'Username', 'Email', 'Phone', 'Password', 'Role']\n"
      ]
     }
    ],
@@ -140,21 +157,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "confident-grocery",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Function to insert values in database\n",
     "def insert_db(database, values):\n",
+    "    '''Appends list of values to csv file\n",
+    "    \n",
+    "    accepts 2 parameters : name of database and list containing values in correct order of header'''\n",
     "    with open(database, 'a') as db:\n",
-    "        db_writer = csv.writer(db)\n",
-    "        db_writer.writerow(values)"
+    "        if type(values) == list:\n",
+    "            db_writer = csv.writer(db)\n",
+    "            db_writer.writerow(values)\n",
+    "        else:\n",
+    "            return False\n",
+    "        return True\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "unusual-entrance",
    "metadata": {},
    "outputs": [
@@ -165,7 +190,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-1bd07386e40f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minsert_db\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_csv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-1bd07386e40f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minsert_db\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_csv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: insert_db() missing 1 required positional argument: 'values'"
      ]
     }
@@ -182,6 +207,118 @@
    "outputs": [],
    "source": [
     "#Function to accept values as a list and return it\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "improving-robin",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(user_header) == list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "sticky-diary",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_password():\n",
+    "    pass\n",
+    "def check_db(database, value):\n",
+    "    '''Returns list of rows of matching values'''\n",
+    "    rows = []\n",
+    "    with open(database,'r') as db:\n",
+    "        db_reader = csv.reader(db)\n",
+    "        for row in db_reader:\n",
+    "            if value in row:\n",
+    "                rows.append(row)\n",
+    "    return rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "passive-newark",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Validates user credentials\n",
+    "def signin():\n",
+    "    '''Checks username, email and password.\n",
+    "Returns false if any one is not found'''\n",
+    "    choice = -1\n",
+    "    error = False\n",
+    "    username = input(\"Enter username: \")\n",
+    "    row = check_db(user_db, username)\n",
+    "    if len(row) > 0:\n",
+    "        email = input(\"Enter email: \")\n",
+    "        if row[2] == email:\n",
+    "            password = input(\"Enter password: \")\n",
+    "            if row[4] == password:\n",
+    "                print(\"Logged in\")\n",
+    "                return True\n",
+    "            else:\n",
+    "                print(\"Wrong password\")\n",
+    "        else:\n",
+    "            print(\"Email not found\")\n",
+    "    else:\n",
+    "        print(\"Username not found\")\n",
+    "    return False\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "careful-cruise",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Main function, application starts from here\n",
+    "def run():\n",
+    "    choice = -1\n",
+    "    while choice != 3:\n",
+    "        choice = int(input(\"1.Sign in \\n2.Sign up \\n3.Exit\\nEnter:\"))\n",
+    "        if choice == 1:\n",
+    "            if signin():# true if signed in false if error\n",
+    "                #Features available after sign in are here\n",
+    "                print(\"Logged in\")\n",
+    "            else:\n",
+    "                print(\"Check credentials or signup for new users\")\n",
+    "                if input(\"Forgot password?(y/n)\") == 'y':\n",
+    "                    changepassword()\n",
+    "        elif choice == 2:\n",
+    "            if !signup():# signup returns false if username, email or id is present.\n",
+    "                print(\"Name or email or id already present\\nSign in if already have an account\")\n",
+    "        elif choice == 3:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Enter choice between 1 and 3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "provincial-honey",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_db()"
    ]
   }
  ],
