Complete signin and retrieving

--- a/CSV_Manipulation.ipynb
+++ b/CSV_Manipulation.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "prepared-lease",
    "metadata": {},
    "outputs": [],
@@ -74,15 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fallen-argument",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "stock-bennett",
    "metadata": {},
    "outputs": [],
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "useful-moment",
    "metadata": {},
    "outputs": [],
@@ -110,44 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "split-transaction",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['User_id', 'Username', 'Email', 'Phone', 'Password', 'Role']\n"
-     ]
-    }
-   ],
-   "source": [
-    "display_db(user_csv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "stopped-feedback",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_csv.writer at 0x103954900>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "viral-degree",
    "metadata": {},
    "outputs": [],
@@ -170,7 +125,11 @@
     "    with open(database, 'a') as db:\n",
     "        if type(values) == list:\n",
     "            db_writer = csv.writer(db)\n",
-    "            db_writer.writerow(values)\n",
+    "            if type(values[0]) == list:\n",
+    "                for row in values:\n",
+    "                    db_writer.writerow(row)\n",
+    "            else:\n",
+    "                db_writer.writerow(values)\n",
     "        else:\n",
     "            return False\n",
     "        return True\n",
@@ -180,28 +139,24 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unusual-entrance",
+   "id": "prepared-listing",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "insert_db() missing 1 required positional argument: 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-1bd07386e40f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minsert_db\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_csv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: insert_db() missing 1 required positional argument: 'values'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['User_id', 'Username', 'Email', 'Phone', 'Password', 'Role']\n"
      ]
     }
    ],
    "source": [
-    "insert_db(user_csv)"
+    "display_db(user_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "wrapped-battlefield",
    "metadata": {},
    "outputs": [],
@@ -211,28 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "improving-robin",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(user_header) == list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "sticky-diary",
    "metadata": {},
    "outputs": [],
@@ -252,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "passive-newark",
    "metadata": {},
    "outputs": [],
@@ -264,8 +198,8 @@
     "    choice = -1\n",
     "    error = False\n",
     "    username = input(\"Enter username: \")\n",
-    "    row = check_db(user_db, username)\n",
-    "    if len(row) > 0:\n",
+    "    rows = check_db(user_csv, username)\n",
+    "    for row in rows:\n",
     "        email = input(\"Enter email: \")\n",
     "        if row[2] == email:\n",
     "            password = input(\"Enter password: \")\n",
@@ -277,14 +211,14 @@
     "        else:\n",
     "            print(\"Email not found\")\n",
     "    else:\n",
-    "        print(\"Username not found\")\n",
+    "        print(\"User not found\")\n",
     "    return False\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "careful-cruise",
    "metadata": {},
    "outputs": [],
@@ -303,13 +237,75 @@
     "                if input(\"Forgot password?(y/n)\") == 'y':\n",
     "                    changepassword()\n",
     "        elif choice == 2:\n",
-    "            if !signup():# signup returns false if username, email or id is present.\n",
+    "            if not signup():# signup returns false if username, email or id is present.\n",
     "                print(\"Name or email or id already present\\nSign in if already have an account\")\n",
     "        elif choice == 3:\n",
     "            break\n",
+    "            \n",
     "        else:\n",
     "            print(\"Enter choice between 1 and 3\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "federal-framing",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.Sign in \n",
+      "2.Sign up \n",
+      "3.Exit\n",
+      "Enter:1\n",
+      "Enter username: Atmaj\n",
+      "Enter email: atmajkoppikar@gmail.com\n",
+      "Enter password: A\n",
+      "Logged in\n",
+      "Logged in\n",
+      "1.Sign in \n",
+      "2.Sign up \n",
+      "3.Exit\n",
+      "Enter:1\n",
+      "Enter username: Atmaj\n",
+      "Enter email: a\n",
+      "Email not found\n",
+      "Username not found\n",
+      "Check credentials or signup for new users\n",
+      "Forgot password?(y/n)n\n",
+      "1.Sign in \n",
+      "2.Sign up \n",
+      "3.Exit\n",
+      "Enter:1\n",
+      "Enter username: Atmaj\n",
+      "Enter email: atmajkoppikar@gmail.com\n",
+      "Enter password: s\n",
+      "Wrong password\n",
+      "Username not found\n",
+      "Check credentials or signup for new users\n",
+      "Forgot password?(y/n)n\n",
+      "1.Sign in \n",
+      "2.Sign up \n",
+      "3.Exit\n",
+      "Enter:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "structured-leather",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -319,6 +315,79 @@
    "outputs": [],
    "source": [
     "check_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "focal-basic",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "random-terrace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['User_id', 'Username', 'Email', 'Phone', 'Password', 'Role']\n",
+      "['5', 'Atmaj', 'atmajkoppikar@gmail.com', '99876543210', 'A', 'Admin']\n",
+      "['2', 'B', 'e-mail', '1', 'password', 'User']\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_db(user_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "labeled-bubble",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert_db(user_csv,[\n",
+    "    [5,'Atmaj','atmajkoppikar@gmail.com','99876543210','A','Admin'],\n",
+    "    [2,'B','e-mail',1,'password','User']\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "golden-expert",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(user_header) == list"
    ]
   }
  ],
